--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,25 @@ img{
 
 .header-caption + img{
     position: absolute;
-    top : 50%;
+    top : 53%;
     left:  50%;
     transform: translate(-50%, -50%); 
+}
+
+.transform > div:nth-child(2)>p:first-of-type{
+    font-family: 'Fraunces', serif;
+    font-weight: 900;
+    font-size: 2.5em;
+}
+
+.transform > div:nth-child(2)>*{
+    max-width: max(60%,365px);
+    text-align: center;
+}
+
+.flex-col-center{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
