--- a/styles.css
+++ b/styles.css
@@ -84,15 +84,34 @@ img{
     transform: translate(-50%, -50%); 
 }
 
-.transform > div:nth-child(2)>p:first-of-type{
+.standalone-desc>p:first-of-type{
     font-family: 'Fraunces', serif;
     font-weight: 900;
     font-size: 2.5em;
 }
 
-.transform > div:nth-child(2)>*{
+.standalone-desc>*{
+    margin-left: 5px;
+    margin-right: 5px;
     max-width: max(60%,365px);
     text-align: center;
+}
+
+
+.standalone-desc>p:last-of-type{
+    margin-top: 2em;
+    font-family: 'Barlow', serif;
+    color: var(--dark-gray-blue);
+    line-height: 1.5em;
+    font-size: 18px;
+}
+
+.standalone-desc a{
+    color: black;
+    font-family: 'Fraunces';
+    font-weight: 700;
+    text-decoration: none;
+    margin-top: 2em;
 }
 
 .flex-col-center{
@@ -100,4 +119,8 @@ img{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.width-small{
+    width : 30px
 }
