--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,33 @@ img{
     margin-top: 2.8rem;
 }
 
+.img-desc{
+    position: absolute;
+    top: 80%;
+    left : 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.img-desc > p:nth-child(1){
+    font-size: 1.7rem;
+    font-family: 'Fraunces', serif;
+    font-weight: 900;
+}
+
+.img-desc > p:nth-child(2){
+    font-family: 'Barlow', serif;
+    max-inline-size: 37ch;
+}
+
+.green-caption{
+    color: var(--desat-cyan);
+}
+
+.blue-caption{
+    color: var(--dark-blue);
+}
+
 .flex-col-center{
     display: flex;
     flex-direction: column;
@@ -123,7 +150,11 @@ img{
 }
 
 .width-small{
-    width : 30px
+    width : 30px;
+}
+
+.aspect-ratio-1{
+    aspect-ratio: 1/1.3;
 }
 
 @media screen and (max-width: 600px) {
