--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,39 @@ img{
     color: var(--dark-blue);
 }
 
+.testimonials{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+}
+
+.testimonials-header{
+    margin-top: max(10%, 2rem);
+}
+
+.testimonial{
+    display: flex;
+    flex-direction: column;
+    max-inline-size: 35ch;
+    align-items: center;
+}
+
+.testimonial > p:not(:last-child){
+    margin-top: 3.5rem;
+}
+
+.testimonial > p:last-child{
+    margin-top: 1rem;
+}
+
+.thumbnail{
+    border-radius: 50%;
+    height: 4.5rem;
+    width: 4.5rem;
+}
+
 .flex-col-center{
     display: flex;
     flex-direction: column;
@@ -159,6 +192,10 @@ img{
 
 .aspect-ratio-1{
     aspect-ratio: 1/1.3;
+}
+
+.text-align-center{
+    text-align: center;
 }
 
 @media screen and (max-width: 600px) {
