--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,23 @@ img{
     color: var(--gray-blue);
 }
 
+.footer{
+    background-color: var(--moderate-cyan);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 4rem;
+}
+
+.footer>p:first-child{
+    font-family: 'Fraunces', serif;
+    font-weight: 900;
+    font-size: 2rem;
+    color: var(--desat-cyan);
+    margin-bottom: 2rem;
+}
+
 .thumbnail{
     border-radius: 50%;
     height: 4.5rem;
@@ -213,16 +230,17 @@ img{
     align-items: center;
 }
 
-.width-small{
-    width : 30px;
-}
-
 .aspect-ratio-1{
     aspect-ratio: 1/1.3;
 }
 
 .text-align-center{
     text-align: center;
+}
+
+a{
+    color: unset;
+    text-decoration: none;
 }
 
 @media screen and (max-width: 600px) {
